Keep runtime identity field ordering deterministic